fix(animation): change end trigger on hero section on mobile device and make sure the video is contain with its height

--- a/src/index.css
+++ b/src/index.css
@@ -133,7 +133,7 @@ body {
   }
 
   /* video {
-    @apply w-full md:h-[80%] h-1/2 absolute bottom-0 left-0 md:object-contain object-bottom object-cover;
+    @apply w-full md:h-[80%] h-1/2 absolute bottom-0 left-0 md:object-contain object-bottom object-cover overflow-y-auto;
   } */
 
   #cocktails {
@@ -185,7 +185,7 @@ body {
   }
 
   #about {
-    @apply min-h-screen py-28 2xl:px-0 px-5 container mx-auto;
+    @apply min-h-screen py-28 2xl:px-0 px-5 mx-auto;
 
     .content {
       @apply grid grid-cols-1 lg:grid-cols-12 gap-5;
